--- a/sisrestore.conf
+++ b/sisrestore.conf
@@ -1,7 +1,15 @@
-PATH="/:$PATH"; export PATH
 wmode=3
 amode=1
-target=/home/user/Video
+target=/home/gio/Public
 srpath=/var/kompudini/sr
 log_file=/var/kompudini/sr/sisrestore.log
 status_file=/var/kompudini/sr/status
+bsdmod=0
+
+# INITPATH
+if [ $bsdmod -eq 0 ]; then
+	INITPATH=/etc/init.d
+elif [ $bsdmod -eq 1 ]; then
+	INITPATH=/etc/rc.d
+fi
+# END OF INITPATH DECLARATION
