--- a/trunk/sisrestore.conf
+++ b/trunk/sisrestore.conf
@@ -1,6 +1,6 @@
 wmode=3
 amode=1
-target=/home/gio/Public
+target=default
 srpath=/var/kompudini/sr
 log_file=/var/kompudini/sr/sisrestore.log
 status_file=/var/kompudini/sr/status
