--- a/trunk/sr.desktop
+++ b/trunk/sr.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
-Name=Sistem Restore
+Name=Sirestore
 Exec=gksudo /usr/sbin/xsr
 Icon=edit-undo
 Type=Application
