added gui install mode in setup.sh

--- a/sisrestore.conf
+++ b/sisrestore.conf
@@ -1,6 +1,6 @@
-wmode=3
+wmode=1
 amode=1
-target=default
+target=targetment
 srpath=/var/kompudini/sr
 log_file=/var/kompudini/sr/sisrestore.log
 status_file=/var/kompudini/sr/status
@@ -13,3 +13,4 @@ elif [ $bsdmod -eq 1 ]; then
 	INITPATH=/etc/rc.d
 fi
 # END OF INITPATH DECLARATION
+
