--- a/sisrestore.conf
+++ b/sisrestore.conf
@@ -1,6 +1,6 @@
 wmode=1
 amode=2
-target=dedemit
+target=null
 srpath=/var/kompudini/sr
 log_file=/var/kompudini/sr/sisrestore.log
 status_file=/var/kompudini/sr/status
