--- a/trunk/sr.desktop
+++ b/trunk/sr.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
-Name=Sirestore
+Name=Sisrestore
 Exec=gksudo /usr/sbin/xsr
 Icon=edit-undo
 Type=Application
 Terminal=false
 GenericName=SistemRestore
 StartupNotify=false
-Categories=Application
+Categories=System
 Name[id_ID]=SistemRestore
