--- a/branches/win-sisrestore-0.9.6.2/sisrestore.conf
+++ b/branches/win-sisrestore-0.9.6.2/sisrestore.conf
@@ -5,12 +5,14 @@ srpath=/var/kompudini/sr
 log_file=/var/kompudini/sr/sisrestore.log
 status_file=/var/kompudini/sr/status
 bsdmod=0
+winmod=1
 
 # INITPATH
-if [ $bsdmod -eq 0 ]; then
+if [ $winmod -eq 1 ]; then
+	INITPATH=$home
+elif [ $bsdmod -eq 0 ]; then
 	INITPATH=/etc/init.d
 elif [ $bsdmod -eq 1 ]; then
 	INITPATH=/etc/rc.d
 fi
 # END OF INITPATH DECLARATION
-
