--- a/trunk/sisrestore.conf
+++ b/trunk/sisrestore.conf
@@ -1,6 +1,6 @@
 wmode=1
 amode=2
-target=null
+target=/home/gio/Videos
 srpath=/var/kompudini/sr
 log_file=/var/kompudini/sr/sisrestore.log
 status_file=/var/kompudini/sr/status
